--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,27 +1,26 @@
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <!-- مكان الفراجمنتات -->
-    <androidx.fragment.app.FragmentContainerView
+    <!-- المكان اللي هيظهر فيه الفراجمنت -->
+    <FrameLayout
         android:id="@+id/nav_host_fragment"
-        android:name="androidx.fragment.app.FragmentContainerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/bottom_nav"/>
+        android:layout_weight="1" />
 
-    <!-- BottomNavigationView -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav"
         android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:layout_alignParentBottom="true"
+        android:layout_height="wrap_content"
         app:menu="@menu/bottom_nav_menu"
-        app:itemTextColor="@color/nav_text_color"
-        app:itemIconTint="@color/nav_icon_color" />
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+        app:itemIconTint="@color/selector_nav_item"
+        app:itemTextColor="@color/selector_nav_item"
+        app:backgroundTint="#E8F5E9" />
+</LinearLayout>
