--- a/app/src/main/res/layout/activity_onboarding03.xml
+++ b/app/src/main/res/layout/activity_onboarding03.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    tools:context=".Onboarding01">
+    tools:context=".Onboarding01"
+    >
 
     <LinearLayout
         android:id="@+id/main"
