--- a/app/src/main/res/layout/fragment_challenges.xml
+++ b/app/src/main/res/layout/fragment_challenges.xml
@@ -1,61 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
+    <!-- الهيدر -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingTop="20dp"
+        android:paddingBottom="8dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp">
+
         <ImageView
             android:id="@+id/image1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/image1"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="20dp"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
+
         <ImageView
             android:id="@+id/image2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/image2"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="20dp"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/txt"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@id/image1"
-            app:layout_constraintEnd_toStartOf="@id/image2"
-            app:layout_constraintTop_toTopOf="parent"
-            android:textColor="#61A655"
-            android:textSize="40dp"
-            android:textStyle="bold"
             android:text="EcoSphere"
-            android:layout_marginTop="55dp"
-            />
-
+            android:textColor="#61A655"
+            android:textStyle="bold"
+            android:textSize="24sp"
+            app:layout_constraintTop_toBottomOf="@+id/image1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="16dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!-- المحتوى -->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        >
+        android:layout_weight="1">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="25dp"
-            >
+            android:padding="25dp">
+
+            <!-- كرّري الكارت ده كما هو للتحديات -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -65,304 +67,38 @@
                 android:padding="15dp"
                 android:layout_marginBottom="15dp"
                 android:gravity="center_vertical">
+
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical">
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="No Plastic Day"
                         android:textStyle="bold"
                         android:textColor="#0F2800"
-                        android:textSize="17dp"
-                        android:layout_marginBottom="5dp"
-                        />
+                        android:textSize="17sp"
+                        android:layout_marginBottom="5dp" />
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Spend one whole day without using any plastic bags or bottles."
                         android:textColor="#0F2800"
-                        android:textSize="15dp"
+                        android:textSize="15sp"/>
+                </LinearLayout>
 
-                        />
-                </LinearLayout>
                 <ImageView
                     android:layout_width="32dp"
                     android:layout_height="32dp"
                     android:src="@drawable/buttom"/>
             </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:background="#E8F5E9"
-                android:elevation="3dp"
-                android:padding="15dp"
-                android:layout_marginBottom="15dp"
-                android:gravity="center_vertical">
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Refill Your Bottle"
-                        android:textStyle="bold"
-                        android:textColor="#0F2800"
-                        android:textSize="17dp"
-                        android:layout_marginBottom="5dp"
-                        />
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Refill a reusable water bottle instead of buying a new plastic one."
-                        android:textColor="#0F2800"
-                        android:textSize="15dp"
-                        />
-                </LinearLayout>
-                <ImageView
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:src="@drawable/buttom"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:background="#E8F5E9"
-                android:elevation="3dp"
-                android:padding="15dp"
-                android:layout_marginBottom="15dp"
-                android:gravity="center_vertical">
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Turn Off the Lights"
-                        android:textStyle="bold"
-                        android:textSize="17dp"
-                        android:textColor="#0F2800"
-                        android:layout_marginBottom="5dp"
-                        />
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Switch off the lights in rooms you’re not using for at least one hour."
-                        android:textColor="#0F2800"
-                        android:textSize="15dp"
-                        />
-                </LinearLayout>
-                <ImageView
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:src="@drawable/buttom"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:background="#E8F5E9"
-                android:elevation="3dp"
-                android:padding="15dp"
-                android:layout_marginBottom="15dp"
-                android:gravity="center_vertical">
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Recycle One Item"
-                        android:textStyle="bold"
-                        android:textSize="17dp"
-                        android:textColor="#0F2800"
-                        android:layout_marginBottom="5dp"
-                        />
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Put at least one recyclable item in a recycling bin instead of the trash.
-"
-                        android:textColor="#0F2800"
-                        android:textSize="15dp"
-                        />
-                </LinearLayout>
-                <ImageView
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:src="@drawable/buttom"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:background="#E8F5E9"
-                android:elevation="3dp"
-                android:padding="15dp"
-                android:layout_marginBottom="15dp"
-                android:gravity="center_vertical">
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Reusable Bag"
-                        android:textStyle="bold"
-                        android:textSize="17dp"
-                        android:textColor="#0F2800"
-                        android:layout_marginBottom="5dp"
-                        />
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Use a reusable cloth bag when shopping instead of taking a plastic bag."
-                        android:textColor="#0F2800"
-                        android:textSize="15dp"
-                        />
-                </LinearLayout>
-                <ImageView
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:src="@drawable/buttom"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:background="#E8F5E9"
-                android:elevation="3dp"
-                android:padding="15dp"
-                android:layout_marginBottom="15dp"
-                android:gravity="center_vertical">
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Public Transport Challenge"
-                        android:textStyle="bold"
-                        android:textColor="#0F2800"
-                        android:textSize="17dp"
-                        android:layout_marginBottom="5dp"
-                        />
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Use public transportation or walk instead of driving."
-                        android:textColor="#0F2800"
-                        android:textSize="15dp"
-                        />
-                </LinearLayout>
-                <ImageView
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:src="@drawable/buttom"/>
-            </LinearLayout>
+
 
         </LinearLayout>
-
     </ScrollView>
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:itemIconSize="30dp"
-        android:layout_gravity="bottom"
-        app:backgroundTint="#E8F5E9"
-        app:itemGravity="center"
-
-        >
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/action_bar"
-            android:layout_gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:id="@+id/h"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/home"
-                app:layout_constraintStart_toStartOf="@id/action_bar"
-                app:layout_constraintTop_toTopOf="@id/action_bar"
-                android:layout_marginLeft="40dp"
-                />
-            <ImageView
-                android:id="@+id/t"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/tree"
-
-                app:layout_constraintStart_toEndOf="@id/h"
-                app:layout_constraintEnd_toStartOf="@id/p"
-                app:layout_constraintTop_toTopOf="@id/action_bar"
-                />
-            <ImageView
-                android:id="@+id/p"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/profile"
-                app:layout_constraintEnd_toEndOf="@id/action_bar"
-                app:layout_constraintTop_toTopOf="@id/action_bar"
-                android:layout_marginRight="40dp"
-                android:textStyle="bold"
-                android:textColor="#1D4F00"
-                android:textSize="15dp"
-                />
-            <TextView
-                android:id="@+id/p1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/p"
-                android:text="Profile"
-                app:layout_constraintEnd_toEndOf="@id/action_bar"
-                android:layout_marginRight="40dp"
-                android:textStyle="bold"
-                android:textColor="#1D4F00"
-                android:textSize="15dp"
-                />
-            <TextView
-                android:id="@+id/h1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/h"
-                android:text="Home"
-                app:layout_constraintStart_toStartOf="@id/action_bar"
-                android:layout_marginLeft="40dp"
-                android:textStyle="bold"
-                android:textColor="#1D4F00"
-                android:textSize="15dp"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/t"
-                android:text="Challenges"
-                app:layout_constraintStart_toEndOf="@id/h1"
-                app:layout_constraintEnd_toStartOf="@id/p1"
-                android:textStyle="bold"
-                android:textColor="#00FF0D"
-                android:textSize="15dp"
-
-                />
-
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </com.google.android.material.bottomnavigation.BottomNavigationView>
 
 </LinearLayout>
