--- a/app/src/main/res/layout/fragment_challenges.xml
+++ b/app/src/main/res/layout/fragment_challenges.xml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/main"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".ChallengesFragment">
 
-    <!-- الهيدر -->
+    <!-- الهيدر لو عايزاه (اختياري) -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="20dp"
-        android:paddingBottom="8dp"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/image1"
@@ -21,7 +18,9 @@
             android:layout_height="wrap_content"
             android:src="@drawable/image1"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="20dp" />
 
         <ImageView
             android:id="@+id/image2"
@@ -29,76 +28,30 @@
             android:layout_height="wrap_content"
             android:src="@drawable/image2"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="20dp" />
 
         <TextView
             android:id="@+id/txt"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="EcoSphere"
+            app:layout_constraintStart_toEndOf="@id/image1"
+            app:layout_constraintEnd_toStartOf="@id/image2"
+            app:layout_constraintTop_toTopOf="parent"
             android:textColor="#61A655"
+            android:textSize="40dp"
             android:textStyle="bold"
-            android:textSize="24sp"
-            app:layout_constraintTop_toBottomOf="@+id/image1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="16dp"/>
+            android:text="EcoSphere"
+            android:layout_marginTop="55dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <!-- المحتوى -->
-    <ScrollView
+    <!-- هنا الـ RecyclerView بتاع التحديات -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/challengesRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="25dp">
-
-            <!-- كرّري الكارت ده كما هو للتحديات -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:background="#E8F5E9"
-                android:elevation="3dp"
-                android:padding="15dp"
-                android:layout_marginBottom="15dp"
-                android:gravity="center_vertical">
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="No Plastic Day"
-                        android:textStyle="bold"
-                        android:textColor="#0F2800"
-                        android:textSize="17sp"
-                        android:layout_marginBottom="5dp" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Spend one whole day without using any plastic bags or bottles."
-                        android:textColor="#0F2800"
-                        android:textSize="15sp"/>
-                </LinearLayout>
-
-                <ImageView
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:src="@drawable/buttom"/>
-            </LinearLayout>
-
-
-        </LinearLayout>
-    </ScrollView>
+        android:layout_weight="1"
+        android:padding="25dp" />
 
 </LinearLayout>
